# solidity-static-analysis

./: CHANGELOG.md  DEAToSC.hs  Main.hs  PartialEvaluator.hs  README.md  SCMonitoring.hs  StaticAnalysis.hs  cabal.project  solidity-static-analysis.cabal
DEA/: DOTParsing.hs  ParsingToSmartContract.hs
EA/: EA.hs
StaticAnalysis/: PartialEvaluator.hs  Residuals.hs  SCSemantics.hs
Util/: EtherescanScraper.hs
src/: CFA.hs  CFG.hs  Main-compliance-with-assertions.hs  Main-compliance.hs  Main-icfg.hs  Main-online-smt.hs  Main-test.hs  Main.hs  ResidualAnalysis.hs  SMT.hs  SMTInstrumentation.hs  StaticAnalysis.hs
src/CFA/: CFA.hs  CFGtoCFA.hs
src/CFG/: CFG.hs  Parsing.hs
src/DEA/: DOTParsing.hs  Parsing.hs
src/EA/: EA.hs
src/ResidualAnalysis/: AbstractCFA.hs  DEAResiduals.hs  IntraAMS.hs  IntraProceduralAbstractMonitoredSystem.hs  ResidualAnalysis.hs
src/SMT/: SMTLib2.hs  SolidityToSMTLib2.hs
src/StaticAnalysis/: CallGraph.hs  ComplianceChecking.hs  ComplianceCheckingWithAssertions.hs  DEAResiduals.hs  ICFG.hs  Parsing.hs  ParsingWithAssertions.hs  ResidualAnalysis.hs  Residuals.hs  SMTInstrumentation.hs  Util.hs
src/examples/: courierservice.sol  courierservicespec.dea
