cabal-version:       2.4

-- Initial package description 'solidity-static-analysis.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

-- The name of the package.
name:                solidity-static-analysis

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.2

-- A short (one-line) description of the package.
synopsis:            Static analysis for Solidity smart contract with properties as symbolic automata.

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:            https://github.com/shaunazzopardi/solidity-static-analysis/

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:             BSD-3-Clause

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              shaunazzopardi

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          shaun.azzopardi@gmail.com

-- A copyright notice.
-- copyright:

category:            Analysis

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  CHANGELOG.md, README.md


library
  -- Modules exported by the library.
  exposed-modules:     Main, SMT, ResidualAnalysis, CFA, SMT.SolidityToSMTLib2, SMT.SMTLib2, ResidualAnalysis.ResidualAnalysis, ResidualAnalysis.IntraAMS, ResidualAnalysis.DEAResiduals, ResidualAnalysis.AbstractCFA, DEA, DEA.DOTParsing, CFA.CFGtoCFA, CFA.CFA

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    ScopedTypeVariables, FlexibleInstances, TypeSynonymInstances, MultiParamTypeClasses

  -- Other library packages from which modules are imported.
  build-depends:       base ^>=4.12.0.0, parsec ^>=3.1.13.0, process ^>=1.6.5.0, contractLarva, solidity-cfg-builder

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010


executable solidity-static-analysis
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:  CFA
                  CFA.CFA
                  CFA.CFGtoCFA
                  DEA
                  DEA.DOTParsing
                  ResidualAnalysis
                  ResidualAnalysis.AbstractCFA
                  ResidualAnalysis.DEAResiduals
                  ResidualAnalysis.IntraAMS
                  ResidualAnalysis.ResidualAnalysis
                  SMT
                  SMT.SMTLib2
                  SMT.SolidityToSMTLib2

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    ScopedTypeVariables, FlexibleInstances, TypeSynonymInstances, MultiParamTypeClasses

  -- Other library packages from which modules are imported.
  build-depends:       base ^>=4.12.0.0, parsec ^>=3.1.13.0, process ^>=1.6.5.0, contractLarva, solidity-cfg-builder

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

